# flame-pytorch

./: .gitattributes  .gitignore  .lfsconfig  404.html  README.md  index.html  mkdocs.yaml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.config/: cspell.config.yaml
.config/copier/: .copier-answers.python.yaml  .copier-answers.shared.yaml  mkdocs.yaml
.config/mise/: config.toml
.github/workflows/: bench.yaml  docs.yaml  mega-linter.yaml  release.yaml  test.yaml
docs/reference/liblaf/flame/: README.md  config.md  flame.md
docs/reference/liblaf/flame/fitting/: README.md
docs/reference/liblaf/flame/upstream/: README.md  config.md  flame.md
docs/reference/liblaf/flame_pytorch/: README.md  config.md  flame.md
docs/reference/liblaf/flame_pytorch/upstream/: README.md  config.md  flame.md
examples/: demo.py  fitting.py
exp/2025/10/22/fitting/data/: 00-target.landmarks.json  10-neutral-sparse.landmarks.json  10-neutral.landmarks.json  20-fitting.ply  20-params.npz  20-shape.np.txt  20-shape.npz  20-shape.ply  20-shape.txt  20-target-mask.ply  20-transform.np.txt  20-transform.npz  20-transform.txt  30-expression.vtp  31-animation.vtp.series
exp/2025/10/22/fitting/data/31-animation.vtp.d/: 31-animation_000000.vtp  31-animation_000001.vtp  31-animation_000002.vtp  31-animation_000003.vtp  31-animation_000004.vtp  31-animation_000005.vtp  31-animation_000006.vtp  31-animation_000007.vtp  31-animation_000008.vtp  31-animation_000009.vtp  31-animation_000010.vtp  31-animation_000011.vtp  31-animation_000012.vtp  31-animation_000013.vtp  31-animation_000014.vtp  31-animation_000015.vtp  31-animation_000016.vtp  31-animation_000017.vtp  31-animation_000018.vtp  31-animation_000019.vtp  31-animation_000020.vtp  31-animation_000021.vtp  31-animation_000022.vtp  31-animation_000023.vtp  31-animation_000024.vtp  31-animation_000025.vtp  31-animation_000026.vtp  31-animation_000027.vtp  31-animation_000028.vtp  31-animation_000029.vtp
exp/2025/10/22/fitting/src/: 10-inspect.py  20-fitting.py  30-gen-expression.py  31-animate.py
reference/liblaf/flame_pytorch/: index.html
reference/liblaf/flame_pytorch/config/: index.html
reference/liblaf/flame_pytorch/flame/: index.html
reference/liblaf/flame_pytorch/upstream/: index.html
reference/liblaf/flame_pytorch/upstream/config/: index.html
reference/liblaf/flame_pytorch/upstream/flame/: index.html
search/: search_index.json
src/liblaf/flame/: config.py  flame.py  flame.pyi
src/liblaf/flame/fitting/: _landmarks.py  _scan.py
src/liblaf/flame_pytorch/: __init__.py  __init__.pyi  config.py  fitting.py  flame.py  flame.pyi
src/liblaf/flame_pytorch/fitting/: __init__.py  _landmarks.py  _scan.py
src/liblaf/flame_pytorch/upstream/: __init__.py
