#:schema https://json.schemastore.org/pyproject.json
# ref: <https://packaging.python.org/en/latest/specifications/pyproject-toml/>

[project]
name = "liblaf-flame-pytorch"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "liblaf", email = "30631553+liblaf@users.noreply.github.com" }
]
keywords = []
classifiers = [
  # ref: <https://pypi.org/classifiers/>
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed"
]
dependencies = [
  "attrs>=25,<26",
  "environs>=14,<15",
  "jaxtyping>=0.3,<0.4",
  "lazy-loader>=0.4",
  "numpy>=2,<3",
  "pooch>=1,<2",
  "smplx>=0.1,<0.2",
  "torch==2.9.0+cu129",
  "wrapt>=2,<3"
]
dynamic = ["version"]

[project.urls]
# ref: <https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels>
"Changelog" = "https://github.com/liblaf/flame-pytorch/blob/main/CHANGELOG.md"
"Documentation" = "https://liblaf.github.io/flame-pytorch/"
"Funding" = "https://github.com/liblaf/flame-pytorch?sponsor=1"
"Homepage" = "https://github.com/liblaf/flame-pytorch"
"Issue Tracker" = "https://github.com/liblaf/flame-pytorch/issues"
"Release Notes" = "https://github.com/liblaf/flame-pytorch/releases"
"Source Code" = "https://github.com/liblaf/flame-pytorch"

[dependency-groups]
dev = [
  "liblaf-cherries>=0.7,<0.8",
  "liblaf-grapes>=8,<9",
  "liblaf-melon>=0.9,<0.10",
  "pytorch3d==0.7.8+pt2.8.0cu129",
  "pyvista>=0.46,<0.47"
]
build = ["check-wheel-contents>=0.6,<0.7", "hatch>=1,<2", "twine>=6,<7"]
docs = ["liblaf-mkdocs-preset>=0.2,<0.3", "mkdocs>=1,<2"]
test = ["liblaf-pytest-preset>=0.1,<0.2", "pytest>=9,<10"]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.hatch.build.hooks.vcs]
version-file = "src/liblaf/flame_pytorch/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/liblaf"]

[tool.hatch.version]
source = "vcs"

[tool.pyright]
extends = ".config/linters/pyrightconfig.json"
ignore = ["src/liblaf/flame_pytorch/upstream"]

[tool.pytest]
addopts = [
  "--doctest-modules",
  "--hypothesis-show-statistics",
  "--import-mode=importlib",
  "--showlocals",
  "--strict-config",
  "--strict-markers"
]
strict = true
testpaths = ["benches", "src", "tests"]

[tool.ruff]
extend = ".config/linters/.ruff.toml"
extend-exclude = ["src/liblaf/flame_pytorch/upstream"]

[tool.ruff.lint]
ignore = ["F722"]

[tool.uv]
default-groups = "all"
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "miropsota"
url = "https://miropsota.github.io/torch_packages_builder/"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"

[tool.uv.sources]
pytorch3d.index = "miropsota"
torch.index = "pytorch"
