#:schema https://json.schemastore.org/pyproject.json
# ref: <https://packaging.python.org/en/latest/specifications/pyproject-toml/>

[project]
name = "liblaf-flame-pytorch"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "liblaf", email = "30631553+liblaf@users.noreply.github.com" }
]
keywords = []
classifiers = [
  # ref: <https://pypi.org/classifiers/>
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed"
]
dependencies = [
  "attrs>=25",
  "environs>=14",
  "jaxtyping>=0.3",
  "lazy-loader>=0.4",
  "numpy>=2",
  "pooch>=1",
  "smplx>=0.1",
  "torch>=2",
  "wrapt>=2"
]
dynamic = ["version"]

[project.urls]
"Changelog" = "https://github.com/liblaf/flame-pytorch/blob/main/CHANGELOG.md"
"Documentation" = "https://liblaf.github.io/flame-pytorch/"
"Funding" = "https://github.com/liblaf/flame-pytorch?sponsor=1"
"Homepage" = "https://github.com/liblaf/flame-pytorch"
"Issue Tracker" = "https://github.com/liblaf/flame-pytorch/issues"
"Release Notes" = "https://github.com/liblaf/flame-pytorch/releases"
"Source Code" = "https://github.com/liblaf/flame-pytorch"

[dependency-groups]
dev = [
  "icecream>=2.2.0",
  "liblaf-cherries>=3",
  "liblaf-grapes>=8",
  "liblaf-melon>=1.1.3",
  "loguru>=0.7.3",
  "pytorch3d==0.7.9+d9839a9pt2.12.0cu132",
  "pyvista>=0.48",
  "torch==2.12.0"
]
build = ["check-wheel-contents>=0.6", "hatch>=1", "twine>=6"]
docs = [
  "griffe-fieldz>=0.5",
  "griffe-inherited-docstrings>=1",
  "griffe-pydantic>=1",
  "griffe-warnings-deprecated>=1",
  "mkdocstrings[python]>=1",
  "zensical>=0.0.44"
]
lint = ["import-linter[ui]>=2", "ruff>=0.15", "ty>=0.0.44"]
nox = ["liblaf-nox-recipes>=0.1", "nox>=2026", "nox-uv>=0.7"]
test = ["hypothesis>=6", "pytest>=9", "pytest-cov>=7", "pytest-randomly>=4"]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.hatch.build.hooks.vcs]
version-file = "src/liblaf/flame_pytorch/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/liblaf"]

[tool.hatch.version]
source = "vcs"

[tool.importlinter]
root_package = "liblaf.flame_pytorch"

[[tool.importlinter.contracts]]
ancestors = ["liblaf.flame_pytorch"]
name = "Acyclic siblings"
type = "acyclic_siblings"

[tool.pytest]
addopts = [
  "--doctest-modules",
  "--import-mode=importlib",
  "--junitxml=junit.xml",
  "--showlocals"
]
consider_namespace_packages = true
junit_family = "legacy"
strict = true
testpaths = ["benches", "src", "tests"]

[tool.ruff]
extend = ".config/linters/.ruff.toml"
extend-exclude = ["src/liblaf/flame_pytorch/upstream"]

[tool.ruff.lint]
ignore = ["F722"]

[tool.ty.src]
exclude = ["src/liblaf/flame_pytorch/upstream"]

[tool.uv]
default-groups = "all"

[[tool.uv.index]]
name = "miropsota"
url = "https://miropsota.github.io/torch_packages_builder/"

[tool.uv.sources]
liblaf-melon = { editable = true, path = "../melon" }
pytorch3d.index = "miropsota"
